--- a/tres_cartera_autos/report/report_tres_cartera_autos_imprimir.xml
+++ b/tres_cartera_autos/report/report_tres_cartera_autos_imprimir.xml
@@ -31,11 +31,11 @@
       		  name="report_tres_cartera_comprobante"
       		  rml="tres_cartera_autos/report/comprobanteCobro.jrxml"
       		  menu="False"/>
-    <report id="report_tres_cartera_egreso"
+    <report id="report_tres_cartera_egreso_prueba"
            	  string="Prueba"
       		  model="tres.cartera"
-      		  name="report_tres_cartera_comprobante"
-      		  rml="tres_cartera_autos/report/comprobanteIngreso.jrxml"
+      		  name="Prueba"
+      		  rml="tres_cartera_autos/report/comprobanteEgreso.jrxml"
       		  menu="False"
       		  auto="True"/>
     <report id="report_tres_cartera_autos_cuotas_cv2"
@@ -44,15 +44,14 @@
       		  name="report.prueba"
       		  rml="tres_cartera_autos/report/Contrato_parte2.jrxml"
       		  menu="False"/>
-<!--  TODOS LOS EGRESOS IMPRIMIR EN LADO DERECHO -->
-	 <report
+	<report
             id="tres_cartera_egreso"
             string="Imprimir"
             model="tres.cartera.egreso"
             name="Todos los Egresos"
             auto="False"
             multi="False"
-            rml="tres_cartera_autos/report/comprobanteIngreso.jrxml"
-             />
+            rml="tres_cartera_autos/report/reportEgreso.jrxml"
+            />
      </data>
 </openerp>
